--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "nanoid": "^4.0.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.1.0",
